syntax = "proto3";

option csharp_namespace = "DionysosProtobuf";
package DionysosProtobuf;
import "google/protobuf/timestamp.proto";

service ArticleService {
  rpc CreateArticle (Article) returns (BooleanReply);
  rpc ReadArticle (SimpleArticle) returns (Article);
  rpc GetAllArticles (EmptyRequest) returns (Articles);
  rpc UpdateArticle (Article) returns (BooleanReply);
  rpc DeleteArticle (SimpleArticle) returns (BooleanReply);
}

service InventoryItemService {
  rpc CreateInventoryItem (InventoryItem) returns (BooleanReply);
  rpc ReadInventoryItem (SimpleInventoryItem) returns (InventoryItem);
  rpc GetAllInventoryItems (EmptyRequest) returns (InventoryItems);
  rpc UpdateInventoryItem (InventoryItem) returns (BooleanReply);
  rpc DeleteInventoryItem (SimpleInventoryItem) returns (BooleanReply);
}

service VendorService {
  rpc CreateVendor (Vendor) returns (BooleanReply);
  rpc ReadVendor (SimpleVendor) returns (Vendor);
  rpc GetAllVendors (EmptyRequest) returns (Vendors);
  rpc UpdateVendor (Vendor) returns (BooleanReply);
  rpc DeleteVendor (SimpleVendor) returns (BooleanReply);
}

message EmptyRequest {
}

message BooleanReply {
  bool success = 1;
}

message Article {
  string ean = 1;
  string name = 2;
  string description = 3;
  int32 vendor_id = 4;
}

message SimpleArticle {
  string ean = 1;
}

message Articles {
  repeated Article values = 1;
}

message InventoryItem {
  int32 id = 1;
  google.protobuf.Timestamp best_before = 2;
  string Ean = 3;
}

message SimpleInventoryItem {
  int32 id = 1;
}

message InventoryItems {
  repeated InventoryItem values = 1;
}

message Vendor {
  int32 id = 1;
  string name = 2;
  string country_code = 3;
}

message SimpleVendor {
  int32 id = 1;
}

message Vendors {
  repeated Vendor values = 1;
}
